chore: add outline to videos

--- a/3-signaling/public/index.html
+++ b/3-signaling/public/index.html
@@ -18,4 +18,9 @@
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="index.js"></script>
+    <style>
+        video {
+            outline: 1px solid black;
+        }
+    </style>
 </html>
